# tinytcp

./: CMakeLists.txt  README.md  compile_commands.json  premake5.lua
docs/: client.md  common.md  compatibility.md  disclaimers.md  server.md
examples/: client.c  server.c
include/: client.h  common.h  server.h  shared.h  tinytcp.h
src/posix/: client.c  common.c  server.c
src/windows/: client.c  common.c  server.c
